# AnkiAutomation

./: README.md  genCards.py  genSentenceDB.py  listcards.py  newCards.txt  pyproject.toml  word.py
